Fixes issue on iOS Safari where the Pay Now button is nowhere to be found. (#445)
* Uses calc to set height in wallets tab in iPhone

* Applies bodyHeight on non iPhone devices

* Moves wallet iPhone styles from within media query to global.

* Subtracts 180px instead of 150px from iPhone wallet screen.

--- a/app/css/touch.styl
+++ b/app/css/touch.styl
@@ -169,6 +169,15 @@ $mobile-view() {
   }
 }
 
+/**
+ * Workaround for iOS Safari issue where window.innerHeight does not work as expected.
+ */
+.ip {
+  #body[screen="wallet"] {
+    height: calc(100vh - 180px);
+  }
+}
+
 .android4 {
   .elem {
     height: 54px;
